# pacman

./: .gitignore  CMakeLists.txt
include/: Scenes.h
include/core/: GameEngine.h  ISceneSwitcher.h  SceneManager.h
include/engine/: GameContext.h
include/engine/assets/: Animation.h  AssetsManager.h
include/engine/core/: Algorithms.h  EngineEvents.h  GameEngine.h  GameSettings.h
include/engine/scene/: ISceneSwitcher.h  SceneManager.h
include/entities/: Entity.h  EntityData.h  Ghost.h  IMap.h  Map.h  Maze.h  Pacman.h
include/scenes/: GameScene.h  MenuScene.h  Scene.h
include/ui/: Button.h  Label.h  UI.h
include/utils/: Log.h  Logger.h
src/: app.cpp
src/core/: AssetsManager.cpp  GameEngine.cpp  SceneManager.cpp
src/engine/assets/: Animation.cpp  AssetsManager.cpp
src/engine/core/: Algorithms.cpp  GameEngine.cpp
src/engine/scene/: SceneManager.cpp
src/entities/: EntityData.cpp  Ghost.cpp  GhostTargets.cpp  Map.cpp  Maze.cpp  Pacman.cpp
src/scenes/: GameScene.cpp  MenuScene.cpp
src/ui/: Button.cpp  Label.cpp
src/utils/: Log.cpp  Logger.cpp
